# agentmap

./: .gitignore  AUDIT.md  CONTRIBUTING.md  INTEGRATIONS.md  INTEROP.md  README.md  SECURITY.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
agentmap/: __init__.py  cli.py  connect.py  core.py  mcp_server.py
demos/01-basic/: .env  SCENARIO.md  agents.json  mcp.json  observations.json
examples/: help.txt  version.txt
tests/: test_connect.py  test_deep.py  test_hardening.py  test_smoke.py
