[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-agentmap"
version = "0.1.1"
description = "Discover and map agent-to-agent / MCP communications and flag shadow AI"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["ai-security", "cognis-digital", "cognis-neural-suite", "security", "mcp", "shadow-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/agentmap"

[project.scripts]
"agentmap-emit" = "agentmap.connect:emit_main"
agentmap = "agentmap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentmap"]

[tool.hatch.metadata]
allow-direct-references = true
